# D-SCRIPT

./: .coverage  .environment.yml.swp  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile.app  Dockerfile.redis  LICENSE  README.md  RUN_DSCRIPT.sh  conda-env.yml  coverage.xml  csv_predict.py  environment.yml  eval_dscript.py  eval_model.py  fasta_embed.py  less  log.tsv  lynnfiles  package-lock.json  package.json  push_huggingface.py  pyproject.toml  pytest.ini  requirements.txt  setup.py  train_dscript.py
.github/workflows/: autorun-tests.yml  codecov_workflow.yml  pypi_publish.yml  python-publish.yml
.ipynb_checkpoints/: train_dscript-checkpoint.py
backup/: train_bak.py  train_bak_1.py
bash_files/: .#train_foldseek_after-cmap-ot.sh  .train_foldseek_after.sh.swp  .train_original.sh.swp  .train_original_foldseek_emb.sh.swp  embeddings  foldseek_emb  outputfolder  seqs-pairs  test.sh  train.sh  train_foldseek_after-cmap-ot.sh  train_foldseek_after.sh  train_foldseek_before.sh  train_foldseek_emb.sh  train_fseek.sh  train_original.sh  train_original_foldseek_emb.sh  train_sampler.sh
config/: site.conf
data/: SARS-CoV-2.fasta  SARS-CoV-2_allPairs.tsv  cmap_pairs  foldseek_vocab.json  human_v1.sav
data/pairs/: cmap_debug_test.tsv  cmap_debug_train.tsv  cmap_test.tsv  cmap_test_lt_400.tsv  cmap_train.tsv  cmap_train_lt_400.tsv  ecoli_test.tsv  ecoli_toy.tsv  fly_test.tsv  human_test.tsv  human_test_40.tsv  human_test_debug.tsv  human_test_esm.tsv  human_train_200.tsv  human_train_debug.tsv  lynntao_pdbseqs_TEST-SET_cmap-filtered-lt400.tsv  lynntao_pdbseqs_TEST-SET_cmap-filtered-lt400_debug.tsv  lynntao_pdbseqs_TEST-SET_cmap-filtered.tsv  lynntao_pdbseqs_TRAIN-SET_cmap-filtered-lt400.tsv  lynntao_pdbseqs_TRAIN-SET_cmap-filtered-lt400_debug.tsv  lynntao_pdbseqs_TRAIN-SET_cmap-filtered.tsv  mouse_test.tsv  worm_test.tsv  yeast_test.tsv
data/seqs/: cmap.fasta  ecoli.fasta  ecoli_dedup.fasta  yeast.fasta  yeast_dedup.fasta
docker/: docker-compose.local.yml  local.env
docs/: Makefile  index.html  requirements.txt
docs/source/: conf.py  data.rst  index.rst  installation.rst  overview.rst  usage.rst
dscript/: 1a0n.tsv  __init__.py  __main__.py  alphabets.py  batch_download.sh  bincmaps  contact_map.py  create_cmap.py  data_collection.py  datamodules.py  fasta.py  fasta_legacy.py  foldseek.py  glider.py  language_model.py  lm_embed.py  load_worker.py  loading.py  pdb.py  pretrained.py  utils.py  utils_legacy.py  view_cmap.py
dscript/.ipynb_checkpoints/: __main__-checkpoint.py
dscript/commands/: __init__.py  embed.py  eval.py  evaluate.py  predict.py  (+11 more)
notebooks/: geomloss.ipynb  h5py_foldseek.ipynb
scripts/: push_huggingface.py
server/: db.sqlite3  web_environment.yml
src/: fasta.py  sequtils.py  utils.py
web-server/: Pipfile  db.sqlite3  manage.py
web-server-sep/: Pipfile
(+316 files in other folders)
