[tool.poetry]
name = "dscript"
version = "0.1.5"
description = "Sequence-based prediction of protein-protein interactions."
authors = [
    "Samuel Sledzieski <samsl@mit.edu>",
    "Rohit Singh <rsingh@mit.edu>"
    ]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.7"
pytorch = "^1.7"
cudatoolkit = "10.2"
pytorch-lightning = "\b"
h5py = "\b"
matplotlib = "\b"
numpy = "\b"
omegaconf = "\b"
pandas = "\b"
scikit-learn = "\b"
scipy = "\b"
seaborn = "\b"
setuptools = "\b"
tqdm = "\b"

[tool.poetry.dev-dependencies]
pre-commit = "\b"
isort = "\b"
flake8 = "\b"
black = "\b"
coverage = "\b"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.coverage.paths]
source = ["dscript"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]
python_files = "test_*.py"
testpaths = [
    "dscript/tests",
]
